[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8"
legion = "0.4"
ron = "0.8"
serde = "1.0"


#[profile.dev]
#opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
#panic = "abort"